--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Install tools
-      run: sudo apt-get install -y sqlite3
+      run: sudo apt-get install -y sqlite3 gcc
 
     - uses: actions/checkout@v2
 
@@ -22,7 +22,7 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: go build -v ./...
+      run: CGO_ENABLED=1 go build -tags "sqlite_foreign_keys" -v ./...
 
     - name: Test
       run: go test -v ./...
